2026R1/Mechanical-ACT-API-26-r1/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/FE/CDB/SectypeCommand.md
# `SectypeCommand`

<a id="ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.FE.CDB.SectypeCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.SectypeCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a SECTYPE command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|------------------------------------------|--------------------------------------------------------------------------------------------------------|
| [`Index`](#SectypeCommand.Index)         | Gets the command index.                                                                                |
| [`Name`](#SectypeCommand.Name)           | Gets the command name.                                                                                 |
| [`RefineKey`](#SectypeCommand.RefineKey) | Mesh refinement level for thin-walled beam sections. Default is zero. Meaningless if type is not BEAM. |
| [`Secid`](#SectypeCommand.Secid)         | Gets the section type number.                                                                          |
| [`Secname`](#SectypeCommand.Secname)     | Gets the section name.                                                                                 |
| [`Subtype`](#SectypeCommand.Subtype)     | Gets the subtype.                                                                                      |
| [`Type`](#SectypeCommand.Type)           | Get the type.                                                                                          |

<a id="property-detail"></a>

## Property detail

<a id="SectypeCommand.Index"></a>

### *property* SectypeCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="SectypeCommand.Name"></a>

### *property* SectypeCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="SectypeCommand.RefineKey"></a>

### *property* SectypeCommand.RefineKey *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Mesh refinement level for thin-walled beam sections. Default is zero. Meaningless if type is not BEAM.

<!-- !! processed by numpydoc !! -->

<a id="SectypeCommand.Secid"></a>

### *property* SectypeCommand.Secid *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the section type number.

<!-- !! processed by numpydoc !! -->

<a id="SectypeCommand.Secname"></a>

### *property* SectypeCommand.Secname *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the section name.

<!-- !! processed by numpydoc !! -->

<a id="SectypeCommand.Subtype"></a>

### *property* SectypeCommand.Subtype *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the subtype.

<!-- !! processed by numpydoc !! -->

<a id="SectypeCommand.Type"></a>

### *property* SectypeCommand.Type *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Get the type.

<!-- !! processed by numpydoc !! -->

